tests/vectors/valid/nested_a_array_map.hex
6E 72 66 31  07  01
  04  01  61
  06  02
    03  00 00 00 00  00 00 00 01
    07  01
      04  01  62
      00
