tests/vectors/invalid/duplicate_key.hex
6E 72 66 31  07  02
  04 01 61
  02
  04 01 61
  01
